# agentic

./: .env  .eslintrc.cjs  .gitignore  .lintstagedrc.json  .txt  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Justfile  LICENSE.template.md  README.md  README.template.md  SECURITY.md  VERSION.txt  deep_dive_machine_actionable.json  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.json  typedoc.json
.claude/: settings.local.json
.claude/commands/: deploy.md  fix.md  init-package.md  review.md
.claude/knowledge/: deep_dive_machine_actionable.json  schema.json
.claude/workflows/: cross-verification.md
.github/: CODEOWNERS  MAINTAINERS.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  nightly-canary.yml  release-please.yml
.husky/: commit-msg  pre-commit
.temp/: .txt
control-plane/scripts/governance/: README.glob.md  glob.ts
scripts/: build-typed-graph.js  check-lock.js  check-meta.js  generate-quickstart.js  render-readme.js  validate-deep-dive.js  validate-deep-dive.py
src/: template.js
src/content/: .md
src/content/examples/drafts/omar/contexts/tech/ai/api/agents/cards/: emergent-collaborator-v0.1.0-alpha.yaml
tests/: classify-scan.test.ts  template.property.test.js  template.test.js
